--- a/kyawfulfellow/index.html
+++ b/kyawfulfellow/index.html
@@ -3,12 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>Redirecting...</title>
-
-    <meta property="og:title" content="Sheetz Is the Greatest Gas Station Ever">
-    <meta property="og:description" content="A retro 90s-style homage to the legendary Sheetz.">
-    <meta property="og:image" content="https://sheetzmybeloved.xyz/logo.png">
-    <meta property="og:url" content="https://sheetzmybeloved.xyz">
-    <meta name="twitter:card" content="summary_large_image">
 </head>
 
 <body>
@@ -16,14 +10,14 @@
     const path = window.location.pathname.slice(1);
 
     const redirects = {
-        "kygroomer25": "https://docs.google.com/document/d/REPLACE_THIS/edit"
+        "kygroomer25": "https://docs.google.com/document/d/1jgjtglxjGGCG0WQceNyqBGogKFoYb78kTukL8qUavf0/edit?tab=t.0"
     };
 
     if (path && redirects[path]) {
         document.body.innerHTML = `
         <div style="text-align:center; font-family:'Comic Sans MS', sans-serif; margin-top:50px;">
             <h1 style="color:red; text-shadow:2px 2px yellow;">Redirecting...</h1>
-            <img src="https://media.discordapp.net/attachments/1374220520131919972/1447630409692221440/image.png?ex=6938fb21&is=6937a9a1&hm=2ebf611ce43cab3c746703aff4864ef3af33f7b8814a8fc285a9bf071ba2d6b7&=&format=webp&quality=lossless&width=697&height=748"
+            <img src="https://media.discordapp.net/attachments/1374220520131919972/1447630409692221440/image.png"
                  style="width:300px; border:5px ridge magenta;">
             <p style="font-size:20px; color:blue;">Please wait while we take you to the document...</p>
             <marquee behavior="alternate" scrollamount="10" style="font-size:18px; color:green;">
