Update redirect link and image source in index.html

--- a/kyawfulfellow/index.html
+++ b/kyawfulfellow/index.html
@@ -10,14 +10,14 @@
     const path = window.location.pathname.slice(1);
 
     const redirects = {
-        "kygroomer25": "https://docs.google.com/document/d/1jgjtglxjGGCG0WQceNyqBGogKFoYb78kTukL8qUavf0/edit?tab=t.0"
+        "kyawfulfellow": "https://docs.google.com/document/d/1jgjtglxjGGCG0WQceNyqBGogKFoYb78kTukL8qUavf0/edit?tab=t.0"
     };
 
     if (path && redirects[path]) {
         document.body.innerHTML = `
         <div style="text-align:center; font-family:'Comic Sans MS', sans-serif; margin-top:50px;">
             <h1 style="color:red; text-shadow:2px 2px yellow;">Redirecting...</h1>
-            <img src="https://media.discordapp.net/attachments/1374220520131919972/1447630409692221440/image.png"
+            <img src="/images/image1.png"
                  style="width:300px; border:5px ridge magenta;">
             <p style="font-size:20px; color:blue;">Please wait while we take you to the document...</p>
             <marquee behavior="alternate" scrollamount="10" style="font-size:18px; color:green;">
