--- a/kyawfulfellow/index.html
+++ b/kyawfulfellow/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Redirecting...</title>
+    <title>Page Not Found</title>
 </head>
 <body>
+
 <script>
-    // Redirect directly to 404.html
-    window.location.href = "404.html";
+    window.location.href = "/404.html";
 </script>
 </body>
 </html>
