--- a/kyawfulfellow/index.html
+++ b/kyawfulfellow/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Page Not Found</title>
+    <title>Redirecting...</title>
 </head>
 <body>
-
 <script>
-    window.location.href = "/404.html";
+    window.location.href = "https://drive.google.com/drive/folders/1Zs3WTI3d3ZiNolLRQptX2kroDp3yOSHG?usp=drive_link";
 </script>
 </body>
 </html>
+// I need more help
