Fuck this shit man

--- a/kyawfulfellow/index.html
+++ b/kyawfulfellow/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
+    // Normalize the path and redirect
     const path = window.location.pathname.replace(/\/$/, "");
-
     if (path === "/kyawfulfellow") {
         window.location.href = "https://drive.google.com/drive/folders/1Zs3WTI3d3ZiNolLRQptX2kroDp3yOSHG?usp=drive_link";
     }
