Create index.html for path redirection to WOHP's website.
This POS code that I whipped up at 5 AM just works, don't ask me to explain it.

--- a/WOHP/index.html
+++ b/WOHP/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Redirecting...</title>
+</head>
+<body>
+<script>
+    // Normalize the path and redirect
+    const path = window.location.pathname.replace(/\/$/, "");
+    if (path === "/WOHP") {
+        window.location.href = "https://wohptheproduct.weebly.com/";
+    }
+</script>
+</body>
+</html>
