--- a/memes/index.html
+++ b/memes/index.html
@@ -38,10 +38,19 @@
         "image1.png",
         "image2.png",
         "image3.png",
+        "image4.png",
+        "image5.png",
+        "image6.png",
         "video1.mp4",
         "video2.mp4",
         "video3.mp4",
-        
+        "video4.mp4",
+        "video5.mp4",
+        "video6.mp4",
+        "video7.mp4",
+        "video8.mp4",
+        "video9.mp4",
+        "video10.mp4",
     ];
 
     
