--- a/memes/index.html
+++ b/memes/index.html
@@ -51,6 +51,8 @@
         "video8.mp4",
         "video9.mp4",
         "video10.mp4",
+        "video11.mp4",
+        "video12.mp4",
     ];
 
     
